import com.github.benmanes.gradle.versions.VersionsPlugin

plugins {
    id "com.github.ben-manes.versions" version "0.36.0"
}

allprojects {
    repositories {
        mavenCentral()
    }

    apply plugin: VersionsPlugin
}

subprojects {
    group = 'de.jowisoftware.rpcsoundscape'
    version = '1.0-SNAPSHOT'

    apply plugin: 'java'
    sourceCompatibility = 15
    targetCompatibility = 15

    tasks.withType(JavaCompile) {
        options.compilerArgs += "--enable-preview"
    }

    tasks.withType(Test) {
        jvmArgs += "--enable-preview"
    }

    tasks.withType(JavaExec) {
        jvmArgs += '--enable-preview'
    }
}

tasks.named("dependencyUpdates").configure {
    revision "release"
    rejectVersionIf {
        isNonStable(it.candidate.version) && !isNonStable(it.currentVersion)
    }
}
